app/tech-shop/microservice/k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: techshop
  labels:
    name: techshop
    app.kubernetes.io/part-of: techshop
